# google_finance_scraper

./: README.md
google-finance-scraper/: README.md  pyproject.toml  setup.cfg
google-finance-scraper/google_finance_scraper/: core.py
