[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "google-finance-scraper"
version = "1.0.0"
description = "Fast Google Finance scraper for stocks, forex, crypto with pandas output"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  {name = "Your Name", email = "youremail@gmail.com"}
]

dependencies = [
  "aiohttp",
  "beautifulsoup4",
  "pandas"
]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/yourusername/google-finance-scraper"
Repository = "https://github.com/yourusername/google-finance-scraper"
